--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
     "@types/enzyme": "^3.10.5",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^24.0.0",
@@ -19,9 +16,14 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "@types/testing-library__jest-dom": "^5.0.1",
+    "@typescript-eslint/eslint-plugin": "^2.19.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "eslint-config-airbnb-typescript": "^7.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.15.1",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "jest-fetch-mock": "^3.0.2",
     "lodash": "^4.17.15",
     "querystring": "^0.2.0",
@@ -31,7 +33,21 @@
     "typescript": "~3.7.2"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "airbnb-typescript",
+    "parserOptions": {
+      "project": "./tsconfig.json"
+    },
+    "rules": {
+      "@typescript-eslint/semi": [
+        "error",
+        "never"
+      ],
+      "arrow-body-style": "off",
+      "max-len": "off",
+      "object-curly-newline": "off",
+      "react/jsx-props-no-spreading": "off",
+      "react/prop-types": "off"
+    }
   },
   "browserslist": {
     "production": [
